test/Fail/Issue292e.err
Issue292e.agda:38.16-18: error: [UnsolvedConstraints]
Failed to solve the following constraints:
  Is empty: ff ≅ tt (stuck)
      [ at Issue292e.agda:38.16-18 ]
